manifests/tenants/my-tenant/company-services/renovate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-tenant-renovate
  labels:
    app.kubernetes.io/managed-by: company-as-code
