manifests/tenants/my-tenant/company-services/renovate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: renovate
  namespace: my-tenant-renovate
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: renovate
  ports:
    - name: http
      port: 80
      targetPort: 8080
